--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,300;0,400;0,700;1,400&display=swap" rel="stylesheet">
-  <link href="http://fonts.cdnfonts.com/css/mont" rel="stylesheet">
+  <!-- <link href="http://fonts.cdnfonts.com/css/mont" rel="stylesheet"> -->
   <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
